2006-03-24  Stepan Kasal  <kasal@ucw.cz>

	* tests/mmodely.test: Fix the test on systems with no lex.

2006-03-23  Stepan Kasal  <kasal@ucw.cz>

	* automake.in (libtool_new_api): Fix a typo in the comment.
	* lib/Automake/Makefile.am (Config.pm): Likewise.
	* lib/am/depend2.am: Likewise.
	* tests/xsource.test: With `set -e', `|| exit 1' is no longer
	needed.

2006-03-23  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* tests/depcomp6.test, tests/depcomp7.test: Change back to
	using `$MAKE && exit 1', but make sure the last command in the
	test is successful.

2006-03-21  Clifford Wolf  <clifford@clifford.at>  (tiny change)
	    Stepan Kasal  <kasal@ucw.cz>
	    Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* aclocal.in (parse_arguments): Added wildcard support to the
	dirlist parser.
	* doc/automake.texi (Macro search path): Document it.
	* tests/dirlist2.test: New test.
	* m4/dirlist, tests/Makefile.am: Adjust.
	* NEWS, THANKS: Update.

2006-03-20  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* m4/init.m4 (AM_INIT_AUTOMAKE): Add `_AM_DEPENDENCIES(OBJC)'
	to `AC_PROG_OBJC' if provided, to fix Objective C depmode
	handling.
	* lib/Automake/Variable.pm (%_ac_macro_for_var): Add entries for
	OBJC and OBJCFLAGS.
	* tests/ext.test: Adjust.
	* tests/objc.test, tests/objc2.test: New tests.
	* tests/Makefile.am: Adjust.
	* doc/automake.texi (Objective C Support): New node.
	(Support for Other Languages): Adjust.
	* NEWS: Update.

2006-03-19  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* lib/Automake/RuleDef.pm (DESCRIPTION): Typo.

	* tests/depcomp6.test, tests/depcomp7.test: Fix failure logic
	to work with `set -e'.

	* tests/depcomp6.test, tests/depcomp7.test: New tests,
	for general `depcomp' functionality, with and without
	`subdir-objects', with and without `libtool'.
	* tests/Makefile.am: Adjust.

	* aclocal.in (write_aclocal): Unlink `aclocal.m4' before
	writing into it, to break a symlinked file.
	* tests/acloca20.test: New test.
	* tests/Makefile.am: Updated.
