@@ -174,6 +174,7 @@ Merijn de Jonge		M.de.Jonge@cwi.nl
 Michael Brantley	Michael-Brantley@deshaw.com
 Michel de Ruiter	mdruiter@cs.vu.nl
 Mike Castle		dalgoda@ix.netcom.com
+Mike Frysinger		vapier@gentoo.org
 Mike Nolta		mrnolta@princeton.edu
 Miles Bader		miles@ccs.mt.nec.co.jp
 Miloslav Trmac		trmac@popelka.ms.mff.cuni.cz
