@@ -134,10 +134,10 @@ my $ac_defun_rx =
 # Matches an AC_REQUIRE line.
 my $ac_require_rx = "AC_REQUIRE\\((?:\\[([^]]+)\\]|([^],)\n]+))\\)";
 
-# Matches an m4_include line
-my $m4_include_rx = "(?:m4_)?(s?)include\\((?:\\[([^]]+)\\]|([^],)\n]+))\\)";
+# Matches an m4_include line.
+my $m4_include_rx = "(m4_|m4_s|s)include\\((?:\\[([^]]+)\\]|([^],)\n]+))\\)";
 
-# Match a serial number
+# Match a serial number.
 my $serial_line_rx = '^#\s*serial\s+(\S*)';
 my $serial_number_rx = '^\d+(?:\.\d+)*$';
 
@@ -348,12 +348,14 @@ sub scan_configure_dep ($)
       # Remove comments from current line.
       s/\bdnl\b.*$//;
       s/\#.*$//;
+      # Avoid running all the following regexes on white lines.
+      next if /^\s*$/;
 
       while (/$m4_include_rx/go)
 	{
 	  my $ifile = $2 || $3;
 	  # Skip missing `sinclude'd files.
-	  next if $1 eq 's' && ! -f $ifile;
+	  next if $1 ne 'm4_' && ! -f $ifile;
 	  push @ilist, $ifile;
 	}
 
@@ -486,6 +488,11 @@ sub scan_file ($$$)
 	    }
 	}
 
+      # Remove comments from current line.
+      # Do not do it earlier, because the serial line is a comment.
+      $line =~ s/\bdnl\b.*$//;
+      $line =~ s/\#.*$//;
+
       while ($line =~ /$ac_defun_rx/go)
 	{
 	  $defun_seen = 1;
@@ -528,7 +535,7 @@ sub scan_file ($$$)
 	{
 	  my $ifile = $2 || $3;
 	  # Skip missing `sinclude'd files.
-	  next if $1 eq 's' && ! -f $ifile;
+	  next if $1 ne 'm4_' && ! -f $ifile;
 	  push (@inc_files, $ifile);
 	  $inc_lines{$ifile} = $.;
 	}
