@@ -23,6 +23,7 @@ acloca17.test \
 acloca18.test \
 acloca19.test \
 acloca20.test \
+acloca21.test \
 acoutnoq.test \
 acoutpt.test \
 acoutpt2.test \
