@@ -1,3 +1,15 @@
+2006-03-25  Mike Frysinger  <vapier@gentoo.org>  (tiny change)
+	    Alexandre Duret-Lutz  <adl@gnu.org>
+
+	* aclocal.in ($m4_include_rx): Do not recognize `include', and
+	adjust scan_configure_dep and scan_file accordingly.
+	(scan_configure_dep): Do not search white lines.
+	(scan_file): Strip comments from current line after checking
+	for serial, so that aclocal does not trip on `m4_include' macros
+	in comments.  Report from Mike Frysinger.
+	* tests/acloca21.test: New file.
+	* tests/Makefile.am (TESTS): Add it.
+
 2006-03-24  Stepan Kasal  <kasal@ucw.cz>
 
 	* tests/mmodely.test: Fix the test on systems with no lex.
@@ -25,7 +37,6 @@
 	* doc/automake.texi (Macro search path): Document it.
 	* tests/dirlist2.test: New test.
 	* m4/dirlist, tests/Makefile.am: Adjust.
-	* NEWS, THANKS: Update.
 
 2006-03-20  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
@@ -39,7 +50,6 @@
 	* tests/Makefile.am: Adjust.
 	* doc/automake.texi (Objective C Support): New node.
 	(Support for Other Languages): Adjust.
-	* NEWS: Update.
 
 2006-03-19  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
